tmsgpack/pack.h

#define inline __inline
typedef struct tmsgpack_packer {
    char *buf;
    size_t length;
    size_t buf_size;
    bool use_bin_type;
} tmsgpack_packer;
typedef struct Packer Packer;
// return -2 when o is too long
static inline int
tmsgpack_pack_unicode(tmsgpack_packer *pk, PyObject *o, long long limit)
{
    assert(PyUnicode_Check(o));

    Py_ssize_t len;
    const char* buf = PyUnicode_AsUTF8AndSize(o, &len);
    if (buf == NULL)
        return -1;

    if (len > limit) {
        return -2;
    }

    int ret = tmsgpack_pack_raw(pk, len);
    if (ret) return ret;

    return tmsgpack_pack_raw_body(pk, buf, len);
}